--- a/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
+++ b/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=exame;user=root;password=;Persist Security Info=False; Connect Timeout=300"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
