--- a/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
+++ b/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SeguroVeiculoConn": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=exame;Integrated Security=True"
+  }
 }
