--- a/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
+++ b/SeguroVeiculos/SeguroVeiculos.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "SeguroVeiculoConn": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=exame;Integrated Security=True"
+    //"SeguroVeiculoConn": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=exame;Integrated Security=True",
+    "SeguroVeiculoConn": "Data Source=exame_db.mssql.somee.com;Initial Catalog=exame_db;Persist Security Info=True;User ID=robsonamendonca_SQLLogin_1;Password=as2l45jfkz"
   }
 }
